# AI_learning_assistant

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/users/: managers.py  models.py  tests.py
apps/users/migrations/: 0001_initial.py
config/: settings.py
