[tool.poetry]
name = "ai-learning-assistant"
version = "0.1.0"
description = ""
authors = ["Marko <marko.mrsevic@outlook.com>"]
readme = "README.md"
packages = [{include = "ai_learning_assistant"}]

[tool.poetry.dependencies]
python = "^3.13"
psycopg = "^3.2.3"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
django = "^5.1.5"
dj-database-url = "^2.3.0"
neomodel = "^5.4.4"
pymongo = "^4.11.2"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
